syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.coffee_maker";
option java_outer_classname = "CoffeeMakerServiceImpl";

package coffeeMaker;

service CoffeeMakerService{
    rpc setBrewingType(BrewType) returns (Response);
    rpc beginBrewing(Empty) returns (stream Response);
}

message BrewType{
    enum type {
        CARAFE = 0;
        HALF_CARAFE = 1;
        SINGLE_CUP = 2;
    }

    type BrewType = 1;
}

message Response{
    string text = 1;
    double progress = 2;
}

message Empty{

}